[gd_scene load_steps=4 format=3 uid="uid://b1vswf0haejvc"]

[ext_resource type="Script" path="res://scripts/option_menu.gd" id="1_04rii"]
[ext_resource type="Texture2D" uid="uid://wequcscovgud" path="res://assets/a5ebd86a7d518e42faa21fa6d4460287.jpg" id="2_oofiy"]
[ext_resource type="PackedScene" uid="uid://b0a1nc7ss5p8t" path="res://scenes/misc/audio_stream_player.tscn" id="3_kd78q"]

[node name="option Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_04rii")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
offset_right = 768.0
offset_bottom = 576.0
scale = Vector2(1.10811, 1)
texture = ExtResource("2_oofiy")
expand_mode = 2

[node name="Camera2D" type="Camera2D" parent="TextureRect"]
position = Vector2(379.024, 274)
zoom = Vector2(1.55, 1.55)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -170.0
offset_right = -149.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Highscore" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Highscore"

[node name="Volume_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x10800"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 360.0
offset_right = -205.0
offset_bottom = 391.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("3_kd78q")]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Highscore" to="." method="_on_highscore_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Back" to="." method="_on_back_pressed"]
